...
    name: "account-name",
    email: "account-email",
    company: "account-company",
    version: "build-info",
    build: "build-info",
    env: "server-info",
    linkProfile: "btn-open-profile",
    linkUsage: "btn-open-usage",
    btnSignOut: "btn-sign-out",
    btnClearCache: "btn-clear-cache",
    signOutSheet: "dialog-sheet",
    clearCacheSheet: "dialog-sheet",
    developerSection: "developer-section",
    aiModelId: "ai-model-id",
    openAiModelButton: "btn-open-ai-model",
...
